--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,11 +3,8 @@ builder = "NIXPACKS"
 
 [deploy]
 healthcheckPath = "/health"
-port = 3001
-startCommand = "uvicorn src.app:app --host 0.0.0.0 --port $PORT"
+port = 8000
+startCommand = "cd backend && uvicorn src.ultra_minimal:app --host 0.0.0.0 --port $PORT"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
-
-[vars]
-NIXPACKS_NO_CACHE = "1" 
+restartPolicyMaxRetries = 10 
