--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -4,7 +4,7 @@ builder = "NIXPACKS"
 [deploy]
 healthcheckPath = "/health"
 port = 8000
-startCommand = "uvicorn src.app_simple:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn src.app_enhanced:app --host 0.0.0.0 --port $PORT"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10 
