--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: uvicorn src.app:app --host 0.0.0.0 --port $PORT 
+web: python test_railway.py && uvicorn src.ultra_simple:app --host 0.0.0.0 --port $PORT 
