--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,8 +3,8 @@ builder = "NIXPACKS"
 
 [deploy]
 healthcheckPath = "/health"
-port = 8000
-startCommand = "uvicorn src.app_test:app --host 0.0.0.0 --port $PORT"
+port = 8080
+startCommand = "uvicorn src.app_full:app --host 0.0.0.0 --port $PORT"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10 
