--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ builder = "NIXPACKS"
 [deploy]
 healthcheckPath = "/health"
 port = 8080
-startCommand = "cd backend && uvicorn src.app_full:app --host 0.0.0.0 --port $PORT"
+startCommand = "cd backend && uvicorn src.app_simple_firebase:app --host 0.0.0.0 --port $PORT"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10 
