--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ builder = "NIXPACKS"
 [deploy]
 healthcheckPath = "/health"
 port = 8000
-startCommand = "uvicorn src.ultra_simple:app --host 0.0.0.0 --port $PORT"
+startCommand = "python test_simple.py"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10 
