--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,9 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
 
 [deploy]
 healthcheckPath = "/health"
 port = 8000
-startCommand = "python app.py"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10 
