--- a/backend/requirements-full.txt
+++ b/backend/requirements-full.txt
@@ -8,10 +8,10 @@ Pillow>=10.0.0
 pillow-heif>=0.13.0
 python-magic>=0.4.27
 
-# AI and ML
+# AI and ML - Fixed versions to avoid conflicts
 openai>=1.0.0
-torch>=2.0.0
-torchvision>=0.15.0
+torch==2.0.1
+torchvision==0.15.2
 clip-by-openai>=1.0
 numpy>=1.24.0
 
