--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -7,7 +7,7 @@ python-multipart>=0.0.6
 Pillow>=10.0.0
 python-magic>=0.4.27
 
-# AI and ML - Minimal versions
+# AI and ML - Minimal versions with OpenAI
 openai>=1.0.0
 numpy>=1.24.0
 
