--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,6 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0 
+uvicorn[standard]==0.24.0
+httpx==0.25.2
+python-dotenv==1.0.0
+openai==1.3.7
+Pillow==10.1.0 
