--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -7,4 +7,4 @@ port = 8080
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-startCommand = "python -m uvicorn src.app_progressive:app --host 0.0.0.0 --port 8080" 
+startCommand = "python -m uvicorn src.app:app --host 0.0.0.0 --port 8080" 
