--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,10 +6,13 @@ python-multipart>=0.0.6
 # Image processing
 Pillow>=10.0.0
 python-magic>=0.4.27
+pillow-heif>=0.13.0
+rembg>=2.0.0
 
 # AI and ML - Minimal versions with OpenAI
 openai>=1.0.0
 numpy>=1.24.0
+torch>=2.0.0
 
 # Firebase
 firebase-admin>=6.2.0
@@ -17,6 +20,7 @@ firebase-admin>=6.2.0
 # Environment and config
 python-dotenv>=1.0.0
 pydantic>=2.0.0
+pydantic-settings>=2.0.0
 
 # HTTP requests
 requests>=2.31.0
@@ -27,6 +31,12 @@ cryptography>=41.0.0
 
 # Rate limiting
 redis>=5.0.0
+
+# System monitoring
+psutil>=5.9.0
+
+# Text processing
+unidecode>=1.3.0
 
 # Testing
 pytest>=7.4.0
