--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -4,7 +4,10 @@ builder = "DOCKERFILE"
 [deploy]
 healthcheckPath = "/health"
 port = 8080
-healthcheckTimeout = 300
+healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-startCommand = "python -m uvicorn src.app:app --host 0.0.0.0 --port 8080" 
+
+# Specify that this is the root directory for deployment
+[build.context]
+path = "." 
