--- a/railway.toml
+++ b/railway.toml
@@ -6,4 +6,8 @@ healthcheckPath = "/health"
 port = 8080
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10 
+restartPolicyMaxRetries = 10
+
+# Specify the backend directory as the root for deployment
+[build.context]
+path = "backend" 
