--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,106 +1,21 @@
-# Python
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Virtual environments
-venv/
-env/
-ENV/
-env.bak/
-venv.bak/
-.venv/
-.venv311/
-
-# IDE
+*.pyc
+*.pyo
+*.pyd
+*.zip
+*.tar.gz
+*.egg-info
 .vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Logs
-*.log
-logs/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Git
+.venv/
+node_modules/
 .git/
 .gitignore
-
-# Documentation
+.DS_Store
+*.log
+test_*.py
+debug_*.py
 *.md
-docs/
-README*
-
-# Tests
-tests/
-test_*
-*_test.py
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Large files and directories
-node_modules/
-frontend/
-shared/
-*.jpg
-*.jpeg
-*.png
-*.gif
-*.mp4
-*.mov
-*.avi
-*.zip
-*.tar
-*.gz
-*.rar
-*.7z
-
-# Database files
-*.db
-*.sqlite
-*.sqlite3
-
-# Jupyter notebooks
-*.ipynb
-.ipynb_checkpoints/
-
-# Temporary files
-*.tmp
-*.temp
-.cache/ 
+.env
+.env.local
+.env.production
+.env.development 
