--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,12 +2,12 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
+# Install system dependencies with optimizations to prevent build crashes
+RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     g++ \
     libmagic1 \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
 COPY requirements.txt requirements.txt
@@ -15,11 +15,8 @@ COPY requirements.txt requirements.txt
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the production app to the root
-COPY src/app_full.py ./app.py
-
-# Copy the rest of the source code
-COPY src/ ./src/
+# Copy the simple app.py (we know this works)
+COPY app.py ./app.py
 
 # Debug: List files to see what was copied
 RUN ls -la
@@ -31,5 +28,5 @@ EXPOSE 8080
 ENV PORT=8080
 ENV PYTHONPATH=/app
 
-# Start the application using the production app
+# Start the application using the simple app
 CMD ["sh", "-c", "uvicorn app:app --host 0.0.0.0 --port $PORT"] 
