Use app_full.py instead of app.py for production deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,8 +15,11 @@ COPY requirements.txt requirements.txt
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the simple app.py (we know this works)
-COPY app.py ./app.py
+# Copy the production app to the root
+COPY src/app_full.py ./app.py
+
+# Copy the rest of the source code for imports
+COPY src/ ./src/
 
 # Debug: List files to see what was copied
 RUN ls -la
@@ -28,5 +31,5 @@ EXPOSE 8080
 ENV PORT=8080
 ENV PYTHONPATH=/app
 
-# Start the application using the simple app
+# Start the application using the production app
 CMD ["sh", "-c", "uvicorn app:app --host 0.0.0.0 --port $PORT"] 
