--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,34 +2,32 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies with optimizations to prevent build crashes
+# Install system dependencies first
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     g++ \
     libmagic1 \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
-COPY requirements.txt requirements.txt
+# Copy requirements and install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir fastapi uvicorn
 
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy the production app to the root
+# Copy the production app
 COPY src/app_full.py ./app.py
 
-# Copy the rest of the source code for imports
+# Copy source files
 COPY src/ ./src/
 
-# Debug: List files to see what was copied
+# Debug: List files
 RUN ls -la
 
-# Expose the port
+# Expose port
 EXPOSE 8080
 
-# Set environment variables
+# Set environment
 ENV PORT=8080
 ENV PYTHONPATH=/app
 
-# Start the application using the production app
-CMD ["sh", "-c", "uvicorn app:app --host 0.0.0.0 --port $PORT"] 
+# Start app
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"] 
