Explicitly disable Nixpacks to force Dockerfile usage

--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,10 @@
 builder = "DOCKERFILE"
 dockerfilePath = "backend/Dockerfile"
 
+# Explicitly disable Nixpacks
+[build.nixpacks]
+enabled = false
+
 [deploy]
 healthcheckPath = "/health"
 port = 8080
