Add Procfile and runtime.txt to force proper deployment, disable Nixpacks more explicitly

--- a/railway.toml
+++ b/railway.toml
@@ -6,6 +6,10 @@ dockerfilePath = "backend/Dockerfile"
 [build.nixpacks]
 enabled = false
 
+# Force Dockerfile usage
+[build.dockerfile]
+enabled = true
+
 [deploy]
 healthcheckPath = "/health"
 port = 8080
