Update backend Railway config to force Dockerfile usage and disable Nixpacks

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -2,16 +2,20 @@
 builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
+# Explicitly disable Nixpacks
+[build.nixpacks]
+enabled = false
+
+# Force Dockerfile usage
+[build.dockerfile]
+enabled = true
+
 [deploy]
 healthcheckPath = "/health"
 port = 8080
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-
-# Explicitly disable Nixpacks
-[build.nixpacks]
-enabled = false
 
 # Specify that this is the root directory for deployment
 [build.context]
