--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,14 +2,10 @@ FROM python:3.11-alpine
 
 WORKDIR /app
 
-# Copy requirements and install Python dependencies only
-COPY requirements.txt .
+# Install Python dependencies only
 RUN pip install --no-cache-dir fastapi uvicorn python-multipart
 
-# Copy the simple app.py (test if this works first)
-COPY app.py ./app.py
-
-# Debug: List files
+# Debug: List files in current directory
 RUN ls -la
 
 # Expose port
@@ -19,5 +15,5 @@ EXPOSE 8080
 ENV PORT=8080
 ENV PYTHONPATH=/app
 
-# Start app
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"] 
+# Start app with a simple test
+CMD ["echo", "Docker build successful"] 
