--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,12 @@ WORKDIR /app
 # Install Python dependencies only
 RUN pip install --no-cache-dir fastapi uvicorn python-multipart
 
+# Copy the production app
+COPY app_full.py ./app.py
+
+# Copy source files
+COPY src/ ./src/
+
 # Debug: List files in current directory
 RUN ls -la
 
@@ -15,5 +21,5 @@ EXPOSE 8080
 ENV PORT=8080
 ENV PYTHONPATH=/app
 
-# Start app with a simple test
-CMD ["echo", "Docker build successful"] 
+# Start app
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"] 
