Move files back to backend directory and update Railway configuration

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,27 +10,20 @@ RUN apt-get update && apt-get install -y \
     zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
+# Copy requirements directly
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all files from the build context
+# Copy all files
 COPY . .
 
-# Use the main app as entrypoint - copy from backend directory
-COPY backend/app_full.py ./app.py
+# Use the main app as entrypoint
+COPY app_full.py ./app.py
 
-# Debug: List files in current directory
 RUN ls -la
 
-# Expose port
 EXPOSE 8080
-
-# Set environment
 ENV PORT=8080
 ENV PYTHONPATH=/app
 
-# Start app
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"] 
