Optimize Dockerfile to reduce build time and use app_full.py

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -2,16 +2,17 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install only essential dependencies first
-RUN pip install fastapi uvicorn
+# Install system dependencies and Python packages in one layer
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    gcc \
+    && rm -rf /var/lib/apt/lists/* && \
+    pip install --no-cache-dir fastapi uvicorn
 
-# Copy the simple app file
-COPY simple_app.py .
-
-# Debug: Show what files we have
-RUN echo "=== Files in /app ===" && ls -la && echo "=== Dockerfile found ==="
+# Copy the main app file
+COPY app_full.py .
 
 EXPOSE 8080
 ENV PORT=8080
 
-CMD ["uvicorn", "simple_app:app", "--host", "0.0.0.0", "--port", "8080"] 
+CMD ["uvicorn", "app_full:app", "--host", "0.0.0.0", "--port", "8080"] 
