--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,18 @@
+# FastAPI and web framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart>=0.0.6 
+python-multipart>=0.0.6
+
+# Firebase
+firebase-admin>=6.2.0
+
+# Environment and config
+python-dotenv>=1.0.0
+pydantic>=2.0.0
+
+# HTTP requests
+requests>=2.31.0
+httpx>=0.25.1
+
+# Security
+cryptography>=41.0.0 
