--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -2,6 +2,6 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "python ../wsgi.py"
+startCommand = "python wsgi.py"
 healthcheckPath = "/health"
 port = 8080 
