--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -2,4 +2,4 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "uvicorn app:app --host 0.0.0.0 --port=$PORT"
+startCommand = "uvicorn src.app:app --host 0.0.0.0 --port=$PORT"
