--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "test:delete-photo": "node -e \"require('./test_live_routes').testDeletePhoto()\""
   },
   "dependencies": {
+    "firebase-admin": "^13.4.0",
     "form-data": "^4.0.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "react-intersection-observer": "^9.16.0"
   },
-  "devDependencies": {},
-  "keywords": ["testing", "api", "deployment", "closetgpt"],
+  "keywords": [
+    "testing",
+    "api",
+    "deployment",
+    "closetgpt"
+  ],
   "author": "ClosetGPT Team",
   "license": "MIT"
 }
