--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.5.2",
+    "react-intersection-observer": "^9.16.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "unidecode": "^1.1.0",
