--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,12 +21,9 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"],
-      "@shared/*": ["./src/shared/*"],
-      "@shared/types": ["./src/shared/types"],
-      "@shared/types/*": ["./src/shared/types/*"]
+      "@/*": ["./*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/types/**/*.d.ts"],
