--- a/railway.toml
+++ b/railway.toml
@@ -4,3 +4,8 @@ sourceDir = "backend"
 
 [deploy]
 startCommand = "uvicorn src.app:app --host 0.0.0.0 --port=$PORT"
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 3
+
+[build.env]
+NODE_ENV = "production"
