--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,8 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 httpx==0.25.2
 Pillow==10.1.0
+pillow-heif==0.15.0
+python-dotenv==1.0.0
 openai==1.3.7
 rembg==2.0.50
 unidecode==1.3.7
