--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,8 +14,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
-# Expose port
+# Expose port (will be overridden by Railway)
 EXPOSE 8000
 
-# Start the application
-CMD ["uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "8000"]
+# Start the application using Railway's PORT environment variable
+CMD uvicorn src.app:app --host 0.0.0.0 --port $PORT
