--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["pip install -r requirements.txt"]
 cmds = ["echo 'Build complete'"]
 
 [start]
-cmd = "uvicorn src.app:app --host 0.0.0.0 --port=$PORT"
+cmd = "uvicorn src.app:app --host 0.0.0.0 --port 8080"
