--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,4 +18,4 @@ COPY . .
 EXPOSE 8000
 
 # Start the application using Railway's PORT environment variable
-CMD uvicorn src.app:app --host 0.0.0.0 --port $PORT
+CMD uvicorn app:app --host 0.0.0.0 --port $PORT
