Fix: Restore sourceDir = backend in railway.toml for consistent deployment - Add sourceDir = backend to build section - Remove conflicting WORKING_DIR setting - This should resolve the deployment failure vs running success mismatch

--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,6 @@
 [build]
 builder = "nixpacks"
+sourceDir = "backend"
 
 [deploy]
 startCommand = "uvicorn app:app --host 0.0.0.0 --port 8080"
@@ -8,7 +9,3 @@ restartPolicyMaxRetries = 3
 
 [build.env]
 NODE_ENV = "production"
-
-# Explicitly specify the working directory
-[deploy.env]
-WORKING_DIR = "backend"
