--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -7,5 +7,5 @@ cmds = ["pip install -r requirements.txt"]
 [phases.build]
 cmds = ["echo 'Build complete'"]
 
-[start]
-cmd = "uvicorn app:app --host 0.0.0.0 --port $PORT"
+# Remove the start command to let railway.toml handle it
+# This prevents conflicts with railway.toml configuration
