--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,7 +3,7 @@ services:
     name: closetgpt-backend
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn src.app:app --host 0.0.0.0 --port 3001
+    startCommand: uvicorn app:app --host 0.0.0.0 --port 3001
     envVars:
       - key: FIREBASE_PROJECT_ID
         value: closetgptrenew
