--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,10 +2,14 @@
 nixPkgs = ["python311", "python311Packages.pip"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = [
+  "pip install --no-cache-dir -r requirements.txt"
+]
 
 [phases.build]
-cmds = ["echo 'Build complete'"]
+cmds = [
+  "echo 'Build phase completed'"
+]
 
-# Remove the start command to let railway.toml handle it
-# This prevents conflicts with railway.toml configuration
+[start]
+cmd = "uvicorn app:app --host 0.0.0.0 --port $PORT"
