--- a/railway.toml
+++ b/railway.toml
@@ -9,3 +9,5 @@ restartPolicyMaxRetries = 3
 
 [build.env]
 NODE_ENV = "production"
+NIXPACKS_PYTHON_VERSION = "3.11"
+NIXPACKS_PIP_VERSION = "23.3.1"
