--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,14 +7,14 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y gcc && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first to leverage Docker cache
-COPY requirements.txt ./
+# Copy requirements first to leverage Docker cache (from backend/ folder)
+COPY backend/requirements.txt ./
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the backend source code
-COPY src ./src
+# Copy the backend source code (from backend/src/ folder)
+COPY backend/src ./src
 
 # Expose port (Railway automatically maps to $PORT)
 ENV PORT=8080
