--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "dockerfile"
-sourceDir = "."
+sourceDir = "backend"
 
 [deploy]
 startCommand = "uvicorn src.app:app --host 0.0.0.0 --port 8080"
