--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "dockerfile"
 sourceDir = "backend"
 
 [deploy]
-startCommand = "uvicorn src.app:app --host 0.0.0.0 --port 8080"
+startCommand = "python main.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
