--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "dockerfile"
 sourceDir = "backend"
 
 [deploy]
-startCommand = "python main.py"
+startCommand = "python app.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
