Fix API client to use correct endpoint format
- Updated API_BASE_URL to include /api suffix
- Removed /api prefix from all endpoint calls
- Now calls /wardrobe/wardrobe-stats instead of /api/wardrobe/wardrobe-stats
- Updated env.example to show correct format
- This matches the recommended pattern for direct FastAPI calls

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,5 +1,5 @@
 # API Configuration
-NEXT_PUBLIC_API_BASE_URL=https://your-backend-url.railway.app
+NEXT_PUBLIC_API_BASE_URL=https://your-backend-url.railway.app/api
 NEXT_PUBLIC_BACKEND_URL=https://your-backend-url.railway.app
 
 # Firebase Configuration (Public)
