--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,9 @@
   "version": 2,
   "framework": "nextjs",
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "NEXT_PUBLIC_BACKEND_URL": "https://closetgptrenew-backend-production.up.railway.app",
+    "NEXT_PUBLIC_API_URL": "https://closetgptrenew-backend-production.up.railway.app"
   },
   "headers": [
     {
