Fix backend URL and API routing issues
- Fixed incorrect backend URLs in all frontend API routes (closetgpt -> closetgptrenew)
- Updated DashboardService to use Next.js API route instead of direct backend calls
- This resolves the 500 Internal Server Error for outfit history stats

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,9 +2,7 @@
   "version": 2,
   "framework": "nextjs",
   "env": {
-    "NODE_ENV": "production",
-    "NEXT_PUBLIC_BACKEND_URL": "https://closetgptrenew-backend-production.up.railway.app",
-    "NEXT_PUBLIC_API_URL": "https://closetgptrenew-backend-production.up.railway.app"
+    "NODE_ENV": "production"
   },
   "headers": [
     {
