--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,7 +3,7 @@ builder = "dockerfile"
 sourceDir = "backend"
 
 [deploy]
-startCommand = "python app.py"
+startCommand = "uvicorn app:app --host 0.0.0.0 --port $PORT"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
