--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,81 @@
+annotated-types==0.7.0
+anyio==3.7.1
+CacheControl==0.14.3
+cachetools==5.5.2
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.2.1
+coloredlogs==15.0.1
+cryptography==46.0.0
+distro==1.9.0
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
 firebase-admin==6.2.0
-openai==1.35.14
-httpx==0.25.2
-Pillow==10.0.1
-python-dotenv==1.0.0
-unidecode==1.3.7
-pydantic-settings==2.0.3
-rembg==2.0.50
-python-multipart==0.0.6
-pillow_heif==0.13.0
+flatbuffers==25.2.10
+google-api-core==2.25.1
+google-api-python-client==2.182.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.21.0
 google-cloud-storage==2.10.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.75.0
+grpcio-status==1.75.0
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.31.0
+httptools==0.6.4
+httpx==0.25.2
+humanfriendly==10.0
+idna==3.10
+imageio==2.37.0
+lazy_loader==0.4
+llvmlite==0.44.0
+mpmath==1.3.0
+msgpack==1.1.1
+networkx==3.5
+numba==0.61.2
+numpy==2.2.6
+onnxruntime==1.22.1
+openai==1.35.14
+opencv-python-headless==4.12.0.88
+packaging==25.0
+Pillow==10.0.1
+pillow-heif==0.13.0
+platformdirs==4.4.0
+pooch==1.8.2
+proto-plus==1.26.1
+protobuf==6.32.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.5.0
+pydantic-settings==2.0.3
+pydantic_core==2.14.1
+PyJWT==2.10.1
+PyMatting==1.1.14
+pyparsing==3.2.4
+python-dotenv==1.0.0
+python-multipart==0.0.6
+PyYAML==6.0.2
+rembg==2.0.50
+requests==2.32.5
+rsa==4.9.1
+scikit-image==0.24.0
+scipy==1.16.2
+sniffio==1.3.1
+starlette==0.27.0
+sympy==1.14.0
+tifffile==2025.9.9
+tqdm==4.67.1
+typing_extensions==4.15.0
+Unidecode==1.3.7
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.24.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
