--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,5 +17,5 @@ COPY src/ ./src/
 # Expose port
 EXPOSE 8080
 
-# Run the FastAPI app
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
+# Run the FastAPI app with Gunicorn
+CMD ["gunicorn", "app:app", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8080", "--log-level", "debug"]
