--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -21,5 +21,5 @@ services:
         generateValue: true
       - key: OPENAI_API_KEY
         sync: false
-      - key: WEATHER_API_KEY
+      - key: OPENWEATHER_API_KEY
         sync: false 
