Add hybrid fallback logic for outfits worn this week - uses lastWorn dates when outfit_history is empty

--- a/backend/firebase.json
+++ b/backend/firebase.json
@@ -4,6 +4,6 @@
   },
   "firestore": {
     "rules": "firebase/firestore.rules",
-    "indexes": "backend/firestore.indexes.json"
+    "indexes": "firestore.indexes.json"
   }
 } 
