FIX: Use python:3.11 instead of python:3.11-slim to avoid registry auth issues
- Changed FROM python:3.11-slim to FROM python:3.11
- This should bypass registry authentication problems with the slim tag
- The base python:3.11 image is more widely available and stable

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
-# Use official Python slim image
-FROM python:3.11-slim
+# Use official Python image (3.11 without slim to avoid registry auth issues)
+FROM python:3.11
 
 # Set working directory
 WORKDIR /app
