--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,8 @@
 # Use official Python image (3.11 without slim to avoid registry auth issues)
 FROM python:3.11
 
+# Force redeploy trigger
+
 # Set working directory
 WORKDIR /app
 
