--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -66,6 +66,7 @@ rembg==2.0.50
 requests==2.32.5
 rsa==4.9.1
 scikit-image==0.24.0
+scikit-learn>=1.3.0
 scipy==1.16.2
 sniffio==1.3.1
 starlette==0.27.0
