--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -45,6 +45,7 @@ openai==1.35.14
 opencv-python-headless==4.12.0.88
 packaging==25.0
 Pillow==10.0.1
+psutil==6.1.0
 pillow-heif==0.13.0
 platformdirs==4.4.0
 pooch==1.8.2
