--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "dockerfile"
 sourceDir = "backend"
 
 [deploy]
-startCommand = "python run.py"
+startCommand = "gunicorn app:app -w 4 -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:${PORT:-8080} --log-level debug"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
