test: Add minimal test app to isolate Railway deployment issues
- Create minimal_test_app.py with simplest possible FastAPI app
- Temporarily switch Railway to use minimal app instead of main app
- This will help isolate if the 502 errors are from Railway config or our main app
- If minimal app works, issue is with main app complexity
- If minimal app fails, issue is with Railway deployment configuration

--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 sourceDir = "backend"
 
 [deploy]
-startCommand = "python run.py"
+startCommand = "python minimal_test_app.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
