force: Trigger fresh Railway deployment
- Update Dockerfile comment to force fresh build
- This should ensure minimal_debug_app.py gets copied properly
- Railway removed the previous deployment, need fresh build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 # Use official Python image (3.11 without slim to avoid registry auth issues)
 FROM python:3.11
 
-# Force redeploy trigger
+# Force redeploy trigger - updated
 
 # Set working directory
 WORKDIR /app
