switch: Switch back to main complex app with Railway health check endpoints
- Change Dockerfile to run main app (run.py) instead of minimal debug app
- Add Railway health check endpoints to main app to prevent deployment removal
- This allows us to test the personalization demo system while Railway routing is fixed
- Main app now has all the personalization demo routes AND Railway health checks

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -28,4 +28,4 @@ COPY src/ ./src/
 EXPOSE 8080
 
 # Run the FastAPI app with uvicorn using Railway's PORT env var
-CMD ["sh", "-c", "python minimal_debug_app.py"]
+CMD ["sh", "-c", "python run.py"]
