SWITCH TO NIXPACKS: Bypass corrupted Docker cache entirely
Docker BuildKit cache is completely broken - even timestamp ARGs are cached.

Switching to Nixpacks builder which:
- Uses different build system (no Docker cache)
- Will copy fresh source files
- Should finally deploy our actual code

This is the nuclear option to fix Railway's cache corruption.

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,8 +1,5 @@
 [build]
-builder = "dockerfile"
-sourceDir = "backend"
-dockerfilePath = "Dockerfile"
-buildCommand = "echo 'Force no-cache build'"
+builder = "NIXPACKS"
 
 [deploy]
 restartPolicyType = "ON_FAILURE"
