FORCE DEPLOY: Metadata fix + pattern/material/fit scoring
Updated CACHE_BUSTER to trigger fresh Railway deployment.

This deployment includes ALL pending fixes:
✅ cd0ac6df1 - Include metadata in /api/wardrobe response
✅ 5db9933d8 - Pattern/material/fit scoring for gym t-shirts
✅ 73522aba8 - Add 'casual' to gym fallback

CRITICAL: Metadata field was missing from wardrobe API response.
This prevented pattern/material/fit scoring from working.

After this deploys, t-shirts will be scored on:
- Pattern: solid > stripes > graphics > floral
- Material: performance > cotton > silk
- Fit: loose > regular > slim

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,8 @@
 FROM python:3.11
 
 # NUCLEAR CACHE BUSTER - Change this number on every deploy to break ALL caches
-ARG CACHE_BUSTER=1760395200
-RUN echo "CACHE BUSTER: $CACHE_BUSTER" && echo "This will never be cached because ARG changes"
+ARG CACHE_BUSTER=1760405200
+RUN echo "CACHE BUSTER: $CACHE_BUSTER" && echo "METADATA FIX DEPLOYMENT - This will never be cached because ARG changes"
 
 # Set working directory
 WORKDIR /app
