chore: Force Railway cache bust for metadata Dict fix

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,8 @@
 FROM python:3.11
 
 # NUCLEAR CACHE BUSTER - Change this number on every deploy to break ALL caches
-ARG CACHE_BUSTER=1729649999
-RUN echo "CACHE BUSTER: $CACHE_BUSTER" && echo "FORCE REBUILD - Timezone fix for analytics endpoint included"
+ARG CACHE_BUSTER=1761128365
+RUN echo "CACHE BUSTER: $CACHE_BUSTER" && echo "FORCE REBUILD - Metadata Dict[str,Any] fix + collar detection + duplicate shoes fix"
 
 # Set working directory
 WORKDIR /app
